Basic refactoring and clarifications, still good enough to keep working on to, innit

--- a/SimTECH/SimTECH/Pages/Drivers/Index.razor
+++ b/SimTECH/SimTECH/Pages/Drivers/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/drivers"
 
-@using SimTECH.Pages.Entrants.Drivers.Dialogs
+@using SimTECH.Pages.Drivers.Dialogs
 
 @inject DriverService _driverService
 @inject ResultService _resultService
