--- a/SimTECH/SimTECH/Pages/Engines/Index.razor
+++ b/SimTECH/SimTECH/Pages/Engines/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/engines"
 
-@using SimTECH.Pages.Entrants.Engines.Dialogs
+@using SimTECH.Pages.Engines.Dialogs
 
 @inject BreadcrumbProvider _bread
 @inject EngineService _engineService
