--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Calendar.razor
@@ -134,9 +134,9 @@
         nextRound = OverviewModel.Races.FindNext()?.Round ?? 0;
         seasonCalendar.Clear();
 
-        var classResults = OverviewModel.ClassResults();
-        var classDrivers = OverviewModel.ClassDrivers();
-        var classTeams = OverviewModel.ClassTeams();
+        var classResults = OverviewModel.ClassResults;
+        var classDrivers = OverviewModel.ClassDrivers;
+        var classTeams = OverviewModel.ClassTeams;
 
         foreach (var race in OverviewModel.Races)
         {
