--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/ConstructorResults.razor
@@ -1,4 +1,4 @@
-﻿@using SimTECH.Pages.Seasons.Overview.Tabs.StandingsTab.Dialogs
+﻿@using SimTECH.Pages.Seasons.Overview.Dialogs
 
 @inject IDialogService _dialogService
 
