--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Landing.razor
@@ -144,9 +144,9 @@
     {
         var parameters = new DialogParameters
         {
-            ["SeasonDrivers"] = OverviewModel.ClassDrivers(),
-            ["SeasonTeams"] = OverviewModel.ClassTeams(),
-            ["Results"] = OverviewModel.ClassResults()
+            ["SeasonDrivers"] = OverviewModel.ClassDrivers,
+            ["SeasonTeams"] = OverviewModel.ClassTeams,
+            ["Results"] = OverviewModel.ClassResults
         };
 
         _ = await _dialogService.ShowAsync<QualyBattles>("QualifyingBattles", parameters, Globals.StatisticDialogDefaultOptions);
@@ -158,9 +158,9 @@
 
         var parameters = new DialogParameters
             {
-                ["SeasonDrivers"] = OverviewModel.ClassDrivers(),
-                ["SeasonTeams"] = OverviewModel.ClassTeams(),
-                ["Results"] = OverviewModel.ClassResults(),
+                ["SeasonDrivers"] = OverviewModel.ClassDrivers,
+                ["SeasonTeams"] = OverviewModel.ClassTeams,
+                ["Results"] = OverviewModel.ClassResults,
                 ["Incidents"] = incidents,
             };
 
@@ -173,8 +173,8 @@
 
         var parameters = new DialogParameters
             {
-                ["SeasonDrivers"] = OverviewModel.ClassDrivers(),
-                ["SeasonTeams"] = OverviewModel.ClassTeams(),
+                ["SeasonDrivers"] = OverviewModel.ClassDrivers,
+                ["SeasonTeams"] = OverviewModel.ClassTeams,
                 ["Contracts"] = activeContracts
             };
 
