--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/SeasonTeams.razor
@@ -69,7 +69,7 @@
 
         TeamItems.Clear();
 
-        foreach (var team in OverviewModel.ClassTeams())
+        foreach (var team in OverviewModel.ClassTeams)
         {
             var engine = OverviewModel.SeasonEngines.FirstOrDefault(e => e.Id == team.SeasonEngineId);
             var manufacturer = OverviewModel.Manufacturers.FirstOrDefault(e => e.Id == team.ManufacturerId);
