--- a/SimTECH/SimTECH/Pages/Teams/Index.razor
+++ b/SimTECH/SimTECH/Pages/Teams/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/teams"
 
-@using SimTECH.Pages.Entrants.Teams.Dialogs
+@using SimTECH.Pages.Teams.Dialogs
 
 @inject BreadcrumbProvider _bread
 @inject TeamService _teamService
