--- a/SimTECH/SimTECH/Pages/Tracks/Index.razor
+++ b/SimTECH/SimTECH/Pages/Tracks/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/tracks"
 
-@using SimTECH.Pages.Entrants.Tracks.Dialogs
+@using SimTECH.Pages.Tracks.Dialogs
 
 @inject BreadcrumbProvider _bread
 @inject TrackService _trackService
