--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -291,6 +291,18 @@ th {
     align-items: center;
 }
 
+.flex-stretch-items > * {
+    flex: 1 1 auto;
+}
+
+.flex-stretch-equal > * {
+    flex: 1 1 0;
+}
+
+.loader {
+    position: relative;
+}
+
 .overflow-hider {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -308,14 +320,6 @@ th {
 
 .pb-20 {
     padding-bottom: 100px !important;
-}
-
-.flex-stretch-items > * {
-    flex: 1 1 auto;
-}
-
-.flex-stretch-equal > * {
-    flex: 1 1 0;
 }
 
 .text-center {
