--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Index.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Index.razor
@@ -4,11 +4,7 @@
 @using SimTECH.Pages.Seasons.Dialogs
 @using SimTECH.Pages.Seasons.Overview.Development
 @using SimTECH.Pages.Seasons.Overview.Dialogs
-@using SimTECH.Pages.Seasons.Overview.Tabs.CalendarTab
-@using SimTECH.Pages.Seasons.Overview.Tabs.EntrantsTab
-@using SimTECH.Pages.Seasons.Overview.Tabs.LandingTab
-@using SimTECH.Pages.Seasons.Overview.Tabs.SettingsTab
-@using SimTECH.Pages.Seasons.Overview.Tabs.StandingsTab
+@using SimTECH.Pages.Seasons.Overview.Tabs
 
 @inject ContractService _contractService
 @inject ClimateService _climateService
@@ -25,7 +21,6 @@
 @inject SeasonTeamService _seasonTeamService
 @inject TeamService _teamService
 @inject TrackService _trackService
-@inject TraitService _traitService
 @inject BreadcrumbProvider _bread
 @inject NavigationManager _nav
 @inject IDialogService _dialogService
@@ -34,8 +29,10 @@
 <PageTitle>Overview</PageTitle>
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
-    @if (!loading)
-    {
+    <MudLoading @bind-Loading="loading"
+                LoaderType="MudExtensions.Enums.LoaderType.Circular"
+                Text="Page is being loaded, some patience please. umu"
+                Class="loader">
         <CascadingValue Value="@OverviewModel">
             <MudTabs Outlined="true" Centered="true" @bind-ActivePanelIndex="@activeTabIndex">
                 <MudTabPanel Text="Overview">
@@ -65,8 +62,7 @@
                             <SeasonEngines OnEditorOpen="UpdateEngine" />
                         </MudTabPanel>
                         <MudTabPanel Text="Power rankings">
-                            <PowerRankings Traits="@Traits"
-                                           TeamRoleCarModifier="@driverStatusMod" />
+                            <PowerRankings TeamRoleCarModifier="@driverStatusMod" />
                         </MudTabPanel>
                     </MudTabs>
                 </MudTabPanel>
@@ -75,26 +71,28 @@
                 </MudTabPanel>
             </MudTabs>
         </CascadingValue>
-    }
+    </MudLoading>
 </MudContainer>
 
 @code {
     [Parameter] public long SeasonId { get; set; }
     [Parameter] public int TabIndex { get; set; }
 
+    // TIP: You should only make changes at a cascading model at the provider level, aka here for OverviewModel
     public OverviewModel OverviewModel { get; set; } = new();
 
     private Race? NextRace { get; set; }
     private List<League> Leagues { get; set; } = new();
     private List<Climate> Climates { get; set; } = new();
-    private List<Trait> Traits { get; set; } = new();
 
     private int activeTabIndex;
     private int driverStatusMod;
-    private bool loading = true;
+    private bool loading;
 
     protected override async Task OnInitializedAsync()
     {
+        loading = true;
+
         activeTabIndex = TabIndex;
 
         OverviewModel.Season = await _seasonService.GetSeasonById(SeasonId);
@@ -106,16 +104,13 @@
         OverviewModel.Manufacturers = await _manufacturerService.GetManufacturers(StateFilter.All);
 
         if (OverviewModel.Season.State == State.Active)
-        {
             NextRace = OverviewModel.Races.FindNext();
-        }
 
         if (OverviewModel.Season.HasRaceClasses)
             OverviewModel.ActiveClassId = OverviewModel.Season.RaceClasses.First().Id;
 
         Climates = await _climateService.GetClimates(StateFilter.All);
         Leagues = await _leagueService.GetLeagues();
-        Traits = await _traitService.GetTraits(StateFilter.All);
 
         var currentLeague = Leagues.Find(e => e.Id == OverviewModel.Season.LeagueId);
         driverStatusMod = currentLeague?.DriverStatusPaceModifier ?? 0;
@@ -132,26 +127,25 @@
 
     private async Task StartSeason()
     {
-        if (OverviewModel.Season != null)
+        if (OverviewModel.Season == null)
+            return;
+
+        var error = await _seasonService.ActivateSeason(SeasonId);
+
+        if (!string.IsNullOrEmpty(error))
         {
-            var error = await _seasonService.ActivateSeason(SeasonId);
-
-            if (error == null)
-            {
-                // Subtract active and added contract durations with 1 (if it is valid)
-                await _contractService.SubtractDurations(OverviewModel.Season.LeagueId, SeasonId);
-
-                OverviewModel.Season.State = State.Active; // NOTE: It always changes to active if started
-                NextRace = await _raceService.GetNextRaceOfSeason(SeasonId);
-
-                _snackbar.Add($"Season {OverviewModel.Season.Year} has been activated!", Severity.Success);
-                StateHasChanged();
-            }
-            else
-            {
-                _snackbar.Add(error, Severity.Error);
-            }
+            _snackbar.Add(error, Severity.Error);
+            return;
         }
+
+        // Subtract active and added contract durations with 1 (if it is valid)
+        await _contractService.SubtractDurations(OverviewModel.Season.LeagueId, SeasonId);
+
+        OverviewModel.Season.State = State.Active; // NOTE: It always changes to active if started
+        NextRace = await _raceService.GetNextRaceOfSeason(SeasonId);
+
+        _snackbar.Add($"Season {OverviewModel.Season.Year} has been activated!", Severity.Success);
+        StateHasChanged();
     }
 
     private async Task UpdateSeason()
@@ -194,10 +188,7 @@
     {
         var league = Leagues.First(e => e.Id == OverviewModel.Season.LeagueId);
 
-        var usedTrackIds = OverviewModel.Races.Select(e => e.TrackId).ToArray();
-        var availableTracks = (await _trackService.GetTracks())
-            .Where(e => !usedTrackIds.Contains(e.Id))
-            .ToList();
+        var availableTracks = await _trackService.GetAvailableTracks(SeasonId);
 
         if (!availableTracks.Any())
         {
@@ -226,7 +217,7 @@
 
     private async Task UpdateRace(Race? item)
     {
-        var currentLeague = Leagues.First(e => e.Id == OverviewModel.Season.LeagueId);
+        var league = Leagues.First(e => e.Id == OverviewModel.Season.LeagueId);
 
         var parameters = new DialogParameters
             {
@@ -278,10 +269,8 @@
 
     private async Task UpdateTeam(SeasonTeam? item)
     {
-        var teams = await _teamService.GetTeams(StateFilter.Active);
-        teams = teams
-            .Where(e => !OverviewModel.SeasonTeams.Select(st => st.TeamId).Contains(e.Id))
-            .ToList();
+        var teams = await _teamService.GetAvailableTeams(SeasonId);
+
         var activeManufacturers = OverviewModel.Manufacturers.Where(e => e.State == State.Active).ToList();
 
         var parameters = new DialogParameters
@@ -305,7 +294,7 @@
 
     private async Task UpdateEngine(SeasonEngine? item)
     {
-        var engines = await _engineService.GetEngines();
+        var engines = await _engineService.GetAvailableEngines(SeasonId);
 
         var parameters = new DialogParameters
             {
