failed coding session

--- a/SimTECH/SimTECH/Pages/Extra/Index.razor
+++ b/SimTECH/SimTECH/Pages/Extra/Index.razor
@@ -45,8 +45,13 @@
                     <MudDivider />
                 </MudPaper>
                 <MudPaper Class="pa-4 mud-height-full">
-                    <MudText Typo="Typo.h5">???</MudText>
+                    <MudText Typo="Typo.h5">Celestials</MudText>
                     <MudDivider />
+                    <MudList>
+                        <MudListSubheader>
+                            Beware the forsaken ones
+                        </MudListSubheader>
+                    </MudList>
                 </MudPaper>
             </MudStack>
         </MudItem>
