--- a/SimTECH/SimTECH/Pages/Drivers/HumanBeingGenerator/Index.razor
+++ b/SimTECH/SimTECH/Pages/Drivers/HumanBeingGenerator/Index.razor
@@ -10,7 +10,7 @@
 @inject ISnackbar _snack
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
-    <MudGrid>
+    <MudGrid Spacing="1">
         <MudItem xs="12">
             <MudPaper Elevation="15" Height="75px" Class="d-flex flex-row justify-center pa-4">
                 <MudText Typo="Typo.h3">Human Being Generator</MudText>
