--- a/SimTECH/SimTECH/Pages/Stats/Index.razor
+++ b/SimTECH/SimTECH/Pages/Stats/Index.razor
@@ -14,7 +14,7 @@
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
     @if (!loading)
     {
-        <MudGrid>
+        <MudGrid Spacing="1">
             <MudItem xs=12>
                 <MudPaper Elevation="15" MinHeight="60px" Class="pa-2">
                     <MudStack Row="true" Justify="Justify.Center" AlignItems="AlignItems.Center" Class="pa-0">
