--- a/SimTECH/SimTECH/Pages/Teams/Dialogs/Import.razor
+++ b/SimTECH/SimTECH/Pages/Teams/Dialogs/Import.razor
@@ -2,7 +2,7 @@
 
 <MudDialog>
     <TitleContent>
-        <MudText>Import teams from real life</MudText>
+        <MudText>Import (F1) teams from reality</MudText>
     </TitleContent>
     <DialogContent>
         <div style="width: 850px">
