--- a/SimTECH/SimTECH/Pages/Drivers/Dialogs/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Drivers/Dialogs/DriverEditor.razor
@@ -1,6 +1,6 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>Driver moment</MudText>
+        <MudText Typo="Typo.h5" Color="Color.Secondary">Driver moment</MudText>
     </TitleContent>
     <DialogContent>
         <MudPaper MinWidth="700px">
