--- a/SimTECH/SimTECH/Pages/Engines/Dialogs/EngineEditor.razor
+++ b/SimTECH/SimTECH/Pages/Engines/Dialogs/EngineEditor.razor
@@ -1,6 +1,6 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>Modify engine</MudText>
+        <MudText Typo="Typo.h5" Color="Color.Secondary">Modify engine</MudText>
     </TitleContent>
     <DialogContent>
         <MudForm Model="@Model">
