--- a/SimTECH/SimTECH/Pages/Extra/Index.razor
+++ b/SimTECH/SimTECH/Pages/Extra/Index.razor
@@ -22,6 +22,7 @@
                     <MudSpacer />
 
                     <MudButtonGroup>
+                        <MudButton>None of the buttons in this row do anything</MudButton>
                         <MudButton>Drivers</MudButton>
                         <MudButton>Constructors</MudButton>
                         <MudButton>Circuits</MudButton>
