--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Index.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Index.razor
@@ -52,7 +52,7 @@
                         <MudButtonGroup VerticalAlign="true" Variant="Variant.Outlined" Color="Color.Secondary" Class="mt-4">
                             <MudButton FullWidth="true"
                                        OnClick="ShowWeightedDevelopmentRanges">
-                                <span>SET ranges for @DevelopModel.ActiveEntrant & @DevelopModel.ActiveAspect</span>
+                                <span>SET ranges</span>
                             </MudButton>
                             <MudButton FullWidth="true"
                                        OnClick="ShowDevelopmentSummary">
