--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/AddRaces.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/AddRaces.razor
@@ -2,7 +2,7 @@
 
 <MudDialog>
     <TitleContent>
-        <MudText>Adding multiple of these bad boys</MudText>
+        <MudText Typo="Typo.h5" Color="Color.Secondary">Adding multiple of these bad boys</MudText>
     </TitleContent>
     <DialogContent>
         @if (errorValidations.Any())
@@ -25,9 +25,9 @@
                           Dense="true"
                           Hover="true">
                     <ToolBarContent>
-                        <MudText>Select a bunch of races to add if you will</MudText>
+                        <MudText Color="Color.Primary">Select a bunch of races to add if you will</MudText>
                         <MudSpacer />
-                        <MudText>Races selected: @(selectedTracks.Count())</MudText>
+                        <MudText Color="Color.Primary">Races selected: @(selectedTracks.Count())</MudText>
                     </ToolBarContent>
                     <HeaderContent>
                         <MudTh>Name</MudTh>
