--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/ContractLengthRemaining.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/ContractLengthRemaining.razor
@@ -2,7 +2,7 @@
     <DialogContent>
         <MudContainer>
             <MudStack Row="true" AlignItems="AlignItems.Center" Class="px-0 pb-2">
-                <MudText Typo="Typo.h5">Remaining contract durations</MudText>
+                <MudText Typo="Typo.h5" Color="Color.Secondary">Remaining contract durations</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
                     <ScreenshotIconButton TargetId="remaining-contract-durations-popup" />
