--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/RaceEditor.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/RaceEditor.razor
@@ -1,6 +1,6 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText Typo="Typo.h5">Modify race</MudText>
+        <MudText Typo="Typo.h5" Color="Color.Secondary">Modify race</MudText>
     </TitleContent>
     <DialogContent>
         <MudPaper MinHeight="300px" Class="pa-4">
