--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/SeasonDriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/SeasonDriverEditor.razor
@@ -2,7 +2,7 @@
 
 <MudDialog>
     <TitleContent>
-        <MudText Typo="Typo.h5">Modify in-season driver</MudText>
+        <MudText Typo="Typo.h5" Color="Color.Secondary">Modify in-season driver</MudText>
     </TitleContent>
     <DialogContent>
         <div style="min-width: 500px">
