--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/SeasonEngineEditor.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/SeasonEngineEditor.razor
@@ -1,6 +1,6 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>Modify season engine</MudText>
+        <MudText Typo="Typo.h5" Color="Color.Secondary">Modify season engine</MudText>
     </TitleContent>
     <DialogContent>
         <MudForm Model="@Model">
