--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/SeasonTeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/SeasonTeamEditor.razor
@@ -1,6 +1,6 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText Typo="Typo.h5">Modify season team</MudText>
+        <MudText Typo="Typo.h5" Color="Color.Secondary">Modify season team</MudText>
     </TitleContent>
     <DialogContent>
         @if (Model.Id == 0)
