--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/UsedComponents.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/UsedComponents.razor
@@ -2,7 +2,7 @@
     <DialogContent>
         <MudPaper Class="px-4 py-1">
             <MudStack Row="true" AlignItems="AlignItems.Center" Class="px-0 pb-2">
-                <MudText Typo="Typo.h5">Penalizable incidents</MudText>
+                <MudText Typo="Typo.h5" Color="Color.Secondary">Penalizable incidents</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
                     <ScreenshotIconButton TargetId="used-components-table" />
