--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/WdcResultChart.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/WdcResultChart.razor
@@ -2,8 +2,8 @@
     <DialogContent>
         <MudPaper MinHeight="900px" MinWidth="1400px" id="wdc-chart-container">
             <MudStack Row="true" AlignItems="AlignItems.Center">
-                <MudIcon Icon="@Icons.Material.Filled.SsidChart" />
-                <MudText>Drivers championship points progression</MudText>
+                <MudIcon Icon="@Icons.Material.Filled.SsidChart" Color="Color.Secondary" />
+                <MudText Typo="Typo.h5" Color="Color.Secondary">Drivers championship points progression</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
                     <ScreenshotIconButton TargetId="wdc-chart-container" />
