--- a/SimTECH/SimTECH/Pages/Tracks/Dialogs/TrackEditor.razor
+++ b/SimTECH/SimTECH/Pages/Tracks/Dialogs/TrackEditor.razor
@@ -1,8 +1,6 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>
-            Modify a track
-        </MudText>
+        <MudText Typo="Typo.h5" Color="Color.Secondary">Modify a track</MudText>
         <MudText>Expected length per race: @(raceLength)KM</MudText>
     </TitleContent>
     <DialogContent>
