--- a/SimTECH/SimTECH/Pages/Traits/Dialogs/TraitEditor.razor
+++ b/SimTECH/SimTECH/Pages/Traits/Dialogs/TraitEditor.razor
@@ -1,6 +1,6 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText Typo="Typo.h5">
+        <MudText Typo="Typo.h5" Color="Color.Secondary">
             @(Model.IsNew ? "Add new trait" : $"Modify {Model.Name}")
         </MudText>
     </TitleContent>
