Exploratory custom theme setter implementation

--- a/SimTECH/SimTECH/Pages/Extra/Index.razor
+++ b/SimTECH/SimTECH/Pages/Extra/Index.razor
@@ -1,5 +1,7 @@
 ﻿@page "/extra"
 
+@using SimTECH.Pages.Extra.Components
+
 @inject CommonService _commonService
 @inject BreadcrumbProvider _bread
 @inject IDialogService _dialogService
@@ -44,6 +46,13 @@
                                        Team="Racing Team" Colour="@Color.Secondary.ToString()" Position="1" />
                     </MudText>
                     <MudDivider />
+                </MudPaper>
+                <MudPaper Class="pa-4 mud-height-full">
+                    <MudText Typo="Typo.h5">Custom theme</MudText>
+                    <MudDivider />
+                    <div>
+                        <CusomThemeConfiguration />
+                    </div>
                 </MudPaper>
                 <MudPaper Class="pa-4 mud-height-full">
                     <MudText Typo="Typo.h5">Celestials</MudText>
