--- a/SimTECH/SimTECH/Pages/Extra/Components/CusomThemeConfiguration.razor
+++ b/SimTECH/SimTECH/Pages/Extra/Components/CusomThemeConfiguration.razor
@@ -71,6 +71,7 @@ else
     }
 
     // Cool idea, doesnt work. Keeps throwing TaskCanceledException when attempting to retrieve it, probably due to size
+    // Alternatively serialize and store this into the database instead of in the browser storage, it is config-like
     private const string themeKey = "KaasdomThema";
 
     public async Task<MudTheme?> GetUserDefinedTheme()
